# eurevia-regate-rsmart-integration-hass

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  renovate.json  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  device_telemetry.yml  feature_request.yml
.github/workflows/: ci.yml  release-manual.yml  release.yml
custom_components/eurevia_regate_rsmart/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  diagnostics.py  entity.py  exceptions.py  fan.py  icons.json  manifest.json  number.py  options_flow.py  platform_helpers.py  repair.py  sensor.py  store.py  strings.json
custom_components/eurevia_regate_rsmart/lib/: __init__.py  binary_registry.py  capabilities.py  conversion.py  entity_discovery.py  field_registry.py  hvac_mode.py  mapping.py  observability.py  scheduler_registry.py  setpoint_registry.py  setpoints.py  slugify.py  system_control.py  (+2 more)
docs/: DEVELOPMENT.md  DISCLAIMER.md  HACS.md  MQTT.md  ROADMAP.md  SUPPORTED_DEVICES.md  TELEMETRY.md
tests/: conftest.py
tests/e2e/: conftest.py  test_regate_snapshot.py
tests/fixtures/: regate_snapshot.json
tests/integration/: test_live_mqtt.py
tests/unit/: test_capabilities.py  test_conversion.py  test_entity_discovery.py  test_entity_publish.py  test_hvac_mode.py  test_mapping.py  test_mqtt_topics.py  test_observability.py  test_repair.py  test_scheduler_registry.py  test_setpoints.py  test_slugify.py  test_system_registry.py  test_telemetry_profile.py  test_telemetry_reporter.py
(+7 files in other folders)
