[project]
name = "eurevia-regate-rsmart-integration-hass"
version = "1.0.0"
description = "Home Assistant custom integration for Eurevia reGATE (rSmart)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that call the live reGATE MQTT broker",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]
"custom_components/**" = ["E501"]
